# update-pip-constraints

./: .cspell.json  .editorconfig  .flake8  .gitignore  .gitpod.yml  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  action.yml  environment.yml  pyproject.toml  pyrightconfig.json  pytest.ini  setup.cfg  tox.ini
.github/workflows/: ci-style.yml  ci-tests.yml  ci.yml
src/update_pip_constraints/: __init__.py
tests/: .gitignore  test_update_pip_constraints.py
