[metadata]
name = update-pip-constraints
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = Update PyPI constraint files for your package
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/update-pip-constraints/issues
    Source = https://github.com/ComPWA/update-pip-constraints
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    pip-tools >=6.2.0  # strip-extras and extras_require
packages = find:
package_dir =
    =src

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-xdist
format =
    black
    isort
flake8 =
    flake8 >=4  # extend-select
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-pytest-style
    flake8-rst-docstrings
    flake8-type-ignore; python_version >="3.8.0"
    flake8-use-fstring
    pep8-naming
mypy =
    mypy
    types-setuptools
lint =
    %(flake8)s
    %(mypy)s
    pydocstyle
    pylint
    radon
sty =
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit
dev =
    %(sty)s
    %(test)s
    tox
    virtualenv <20.16; python_version <"3.8.0"  # https://github.com/ComPWA/update-pip-constraints/actions/runs/3518625812/jobs/5897744568#step:5:47

[options.entry_points]
console_scripts =
    update-pip-constraints = update_pip_constraints:main

[options.packages.find]
where = src
