[metadata]
name = update-pip-constraints
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
description = Update PyPI constraint files for your package
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/update-pip-constraints/issues
    Source = https://github.com/ComPWA/update-pip-constraints
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    importlib-metadata; python_version <"3.8.0"
    pip-tools >=6.2.0  # strip-extras and extras_require
    toml
    uv; python_version >="3.8.0"
packages = find:
package_dir =
    =src

[options.extras_require]
test =
    pytest
    pytest-cov
types =
    pytest
    types-setuptools
    types-toml
sty =
    %(types)s
    mypy
    pre-commit
    ruff; python_version >="3.7.0"
dev =
    %(sty)s
    %(test)s
    tox

[options.entry_points]
console_scripts =
    update-pip-constraints = update_pip_constraints:main

[options.packages.find]
where = src
